--- a/README
+++ b/README
@@ -8,3 +8,25 @@
 - Datasets and multicrab jobs: test/multicrab.cfg
 
 Enjoy it!
+
+
+To reproduce these results:
+ export SCRAM_ARCH=slc6_amd64_gcc481
+ cmsrel CMSSW_7_1_4
+ cd CMSSW_7_1_4/src
+ cmsenv
+ git cms-addpkg HLTrigger/Configuration
+ git cms-merge-topic perrotta:hltTemplatesForRun2In714
+ scramv1 b -j 18
+ cd HLTrigger/Configuration/test/
+ ./cmsDriver.csh 
+ cd ../../../
+ mkdir MyTrigger
+ git clone https://github.com/alefisico/myTriggerStudies.git MyTrigger/myTriggerStudies
+ git clone git@github.com:jiafulow/HLTrigger-HLTanalyzers-test-openHLT.git MyTrigger/myTriggerStudies/test/openHLT
+ scramv1 b -j 18
+ cmsenv 
+
+HLT Menu used:
+ hltGetConfiguration /dev/CMSSW_7_1_1/HLT/V134 --full --offline --mc --unprescale --process TEST --globaltag auto:startup_GRun > hlt.py
+
