--- a/README
+++ b/README
@@ -27,6 +27,26 @@ To reproduce these results:
  scramv1 b -j 18
  cmsenv 
 
+Follow instructions from here openHLT/addpkg_7_1_0.txt (openHLT JETMET package):
+ git cms-addpkg HLTrigger/HLTanalyzers
+ git cms-addpkg PhysicsTools/PatAlgos
+ git cms-addpkg RecoMET/METFilters
+ wget --no-check-certificate https://raw.githubusercontent.com/jiafulow/VHbbAnalysis/CMSSW_7_0_0_dev/additionalFiles/sandbox/TobTecFakesFilter.cc -O RecoMET/METFilters/plugins/TobTecFakesFilter.cc
+ wget --no-check-certificate https://raw.githubusercontent.com/jiafulow/VHbbAnalysis/CMSSW_7_0_0_dev/additionalFiles/sandbox/metOptionalFilters_cff.py -O RecoMET/METFilters/python/metOptionalFilters_cff.py
+ git cms-addpkg RecoJets/JetProducers
+ wget --no-check-certificate https://raw.githubusercontent.com/violatingcp/Jets_Short/832d3b/RecoJets/JetProducers/python/PileupJetIDCutParams_cfi.py -O RecoJets/JetProducers/python/PileupJetIDCutParams_cfi.py
+ wget --no-check-certificate https://raw.githubusercontent.com/violatingcp/Jets_Short/832d3b/RecoJets/JetProducers/python/PileupJetIDParams_cfi.py -O RecoJets/JetProducers/python/PileupJetIDParams_cfi.py
+ wget --no-check-certificate https://raw.githubusercontent.com/violatingcp/Jets_Short/832d3b/RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_Dec2012.weights.xml -O RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_Dec2012.weights.xml
+ wget --no-check-certificate https://raw.githubusercontent.com/violatingcp/Jets_Short/832d3b/RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_chs_Dec2012.weights.xml -O RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_chs_Dec2012.weights.xml
+ wget --no-check-certificate https://raw.githubusercontent.com/violatingcp/Jets_Short/832d3b/RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_MET_53X_Dec2012.weights.xml -O RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_MET_53X_Dec2012.weights.xml
+ wget --no-check-certificate https://raw.githubusercontent.com/jiafulow/VHbbAnalysis/CMSSW_7_0_0_dev/additionalFiles/sandbox/PileupJetID_53x_cfi.py -O RecoJets/JetProducers/python/PileupJetID_53x_cfi.py
+ touch RecoJets/JetProducers/data/dummy.txt
+ cp RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_chs_Dec2012.weights.xml RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_chs_Dec2012.orig.weights.xml
+ sed -i 's/jetPt \&gt; 20\.0/jetPt \&gt; 0.0/' RecoJets/JetProducers/data/TMVAClassificationCategory_JetID_53X_chs_Dec2012.weights.xml
+ scramv1 b -j 18
+ cmsenv 
+
+
 HLT Menu used:
- hltGetConfiguration /dev/CMSSW_7_1_1/HLT/V134 --full --offline --mc --unprescale --process TEST --globaltag auto:startup_GRun > hlt.py
+ hltGetConfiguration /dev/CMSSW_7_1_1/HLT/V134 --full --offline --mc --unprescale --process TEST --globaltag auto:startup_GRun --no-output > hlt.py
 
